// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Page: ListPage2 displays TFA enabled status 1`] = `
Object {
  "actions": Object {
    "deletable": true,
    "editRoute": "/account/users/edit/test-user-1",
  },
  "fields": Array [
    <User
      email="user1@test.com"
      name="Test User 1"
      username="test-user-1"
    />,
    "admin",
    <Tag
      color="blue"
    >
      Enabled
    </Tag>,
    "Never",
  ],
}
`;

exports[`Page: ListPage2 displays last login 1`] = `
Object {
  "actions": Object {
    "deletable": true,
    "editRoute": "/account/users/edit/test-user-1",
  },
  "fields": Array [
    <User
      email="user1@test.com"
      name="Test User 1"
      username="test-user-1"
    />,
    "admin",
    <Tag>
      Disabled
    </Tag>,
    <TimeAgo
      component="time"
      date={2018-04-01T16:15:00.000Z}
      formatter={[Function]}
      live={false}
      maxPeriod={Infinity}
      minPeriod={0}
      now={[Function]}
    />,
  ],
}
`;

exports[`Page: ListPage2 formats users for the table collection 1`] = `
Object {
  "actions": Object {
    "deletable": true,
    "editRoute": "/account/users/edit/test-user-1",
  },
  "fields": Array [
    <User
      email="user1@test.com"
      name="Test User 1"
      username="test-user-1"
    />,
    "admin",
    <Tag>
      Disabled
    </Tag>,
    "Never",
  ],
}
`;

exports[`Page: ListPage2 renders a list page 1`] = `
<ListPage
  columns={
    Array [
      Object {
        "label": "User",
        "sortKey": "name",
      },
      Object {
        "label": "Role",
        "sortKey": "access",
      },
      Object {
        "label": "Two Factor Auth",
        "sortKey": "tfa_enabled",
      },
      Object {
        "label": "Last Login",
        "sortKey": "last_login",
      },
      null,
    ]
  }
  defaultSortColumn="name"
  deleteWarning={[Function]}
  empty={
    Object {
      "content": <p>
        Manage your team's accounts and roles.
      </p>,
      "image": [Function],
      "secondaryAction": Object {
        "Component": [Function],
        "content": "Edit your user account",
        "to": "/account/users/edit/test-user-1",
      },
      "show": false,
      "title": "Invite Your Team to SparkPost",
    }
  }
  error={null}
  filterBox={
    Object {
      "exampleModifiers": Array [
        "name",
        "email",
        "role",
      ],
      "itemToStringKeys": Array [
        "username",
        "name",
        "email",
      ],
      "keyMap": Object {
        "role": "access",
      },
    }
  }
  items={
    Array [
      Object {
        "access": "admin",
        "email": "user1@test.com",
        "name": "Test User 1",
        "tfa_enabled": false,
        "username": "test-user-1",
      },
      Object {
        "access": "admin",
        "email": "user2@test.com",
        "name": "Test User 2",
        "tfa_enabled": true,
        "username": "test-user-2",
      },
      Object {
        "access": "admin",
        "email": "user3@test.com",
        "name": "Test User 3",
        "subaccount_id": 125,
        "tfa_enabled": true,
        "username": "test-user-3",
      },
    ]
  }
  loadItems={[MockFunction]}
  loading={false}
  noun="user"
  onDelete={[Function]}
  primaryAction={
    Object {
      "content": "Invite User",
      "to": "/account/users/create",
    }
  }
  renderRow={[Function]}
/>
`;
